-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.7 - Apr 5, 2019

 + GUI: linux: a simple GUI based on GTK+v3
 * linux: use Pulse Audio output by default
   ALSA can't be used out-of-the-box on some linux distributions
    where PA service prevents the device from opening by fmedia


fmedia v1.6 - Mar 15, 2019

 + set process exit code after a track is finished with an error
 - crash on opening directory from disk (v1.5 bug)
 - AAC decode: incorrect audio position of the first block (v0.30 bug)
 - --dynanorm: crash on trying to use empty configuration (v1.1 bug)
 - TUI: 'mute' setting was reset on track change


fmedia v1.5 - Feb 9, 2019

 + HLS client
 + .mp4: support --stream-copy
 + WASAPI: --list-dev: Mark default device
 + WASAPI: --list-dev: Print default format for shared mode
 + ICY: support UTF-8 meta
 - Recording with --until produced a file with less audio length than expected


fmedia v1.4 - Jan 7, 2019

 + net.http: config: "proxy" - Connect via HTTP proxy server
 + GUI: Restore user-selected theme on startup
 + GUI: Playback -> "Select Audio Device" - Select playback audio device
 + GUI: Help -> "Edit GUI Themes..."
 - GUI: Help -> "Edit User Settings": Set the correct path for portable mode
   Set the path to application directory for this command if fmedia is
    configured in portable mode.
 + Load "fmedia-user.conf" in portable mode
 *! Moved "gui.gui.portable_conf" -> "core.portable_conf"
 - ICY: Couldn't play radio streams with "Content-Type: audio/aac"
 - file.out: Invalid characters in filename when using auto-naming (v0.22 bug)
   If the value of $-variable ends with a space, then it might result in
    corrupted output filename.


fmedia v1.3 - Dec 9, 2018

 + GUI: Parallel conversion (fmedia.conf::workers).
 + Parallel conversion from command line ('--parallel' switch)
 - .m4a write: Couldn't convert from broken .mp3